--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "node": "^21.2.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
@@ -21,7 +23,9 @@
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
